fix(monolith): Migrated flairs collection to MongoDB. Created different types for internal and requests create/update actions.
