# libs/models/src/application.ts
@@ -6,8 +6,8 @@ export class Application {
   constructor(
     public id: string,
     public status: ApplicationStatus,
-    public table: TableHeader,
     public applicant: UserHeader,
+    public table: TableHeader,
     public message: string,
     public creationDate: Date,
     public lastUpdateDate: Date
@@ -30,8 +30,8 @@ export class Application {
       : new Application(
           map['id'] as string,
           map['status'] as ApplicationStatus,
-          map['table'] as TableHeader,
           map['applicant'] as UserHeader,
+          map['table'] as TableHeader,
           map['message'] as string,
           map['creationDate'] as Date,
           map['lastUpdateDate'] as Date
@@ -42,8 +42,8 @@ export class Application {
     return {
       id: this.id,
       status: this.status,
-      table: this.table,
       applicant: this.applicant,
+      table: this.table,
       message: this.message,
       creationDate: this.creationDate,
       lastUpdateDate: this.lastUpdateDate,
@@ -57,6 +57,7 @@ export enum ApplicationStatus {
   DECLINED = 'DECLINED',
 }
 
-export type ApplicationCreateBody = Partial<Pick<Application, 'applicant' | 'table' | 'message'>>;
+export type ApplicationCreateBody = Partial<Pick<Application, 'status' | 'applicant' | 'table' | 'message'>>;
+export type ApplicationCreateBodyRequest = Pick<ApplicationCreateBody, 'applicant' | 'table' | 'message'>;
 
 export type ApplicationUpdateBody = Partial<Pick<Application, 'status' | 'lastUpdateDate'>>;
