# libs/models/src/flair.ts
@@ -1,11 +1,13 @@
 import { DocumentSnapshot, DocumentData } from 'firebase-admin/firestore';
+import { Document } from 'mongodb';
+import { SupportedLanguages } from '.';
 
 export class Flair {
   constructor(
     public id: string,
     public type: FlairTypes,
     public name: string,
-    public labels: { [key: string]: string },
+    public labels: Record<SupportedLanguages, string>,
     public numberOfUses: number,
     public creationDate: Date,
     public lastUpdateDate: Date
@@ -15,12 +17,26 @@ export class Flair {
     return !snapshot || !snapshot.exists ? null : Flair.fromMap({ ...snapshot.data(), id: snapshot.id });
   }
 
-  // eslint-disable-next-line @typescript-eslint/no-explicit-any
-  static fromMap(map: any) {
-    return new Flair(map.id, map.type, map.name, map.labels, map.numberOfUses, map.creationDate, map.lastUpdateDate);
+  static fromMongoDB(doc: Document | null): Flair | null {
+    if (!doc) {
+      return null;
+    }
+    return Flair.fromMap({ ...doc });
   }
 
-  toMap() {
+  static fromMap(map: Record<string, unknown>) {
+    return new Flair(
+      map['id'] as string,
+      map['type'] as FlairTypes,
+      map['name'] as string,
+      map['labels'] as Record<SupportedLanguages, string>,
+      map['numberOfUses'] as number,
+      map['creationDate'] as Date,
+      map['lastUpdateDate'] as Date
+    );
+  }
+
+  toMap(): Omit<Flair, 'toMap'> {
     return {
       id: this.id,
       type: this.type,
@@ -43,5 +59,7 @@ export enum FlairTypes {
 }
 
 export type FlairCreationBody = Partial<Pick<Flair, 'type' | 'name' | 'labels'>>;
+export type FlairCreationBodyRequest = Pick<FlairCreationBody, 'type' | 'name' | 'labels'>;
 
-export type FlairUpdateBody = Partial<Pick<Flair, 'type' | 'name' | 'labels'>>;
+export type FlairUpdateBody = Partial<Pick<Flair, 'type' | 'name' | 'labels' | 'numberOfUses' | 'lastUpdateDate'>>;
+export type FlairUpdateBodyRequest = Pick<FlairUpdateBody, 'type' | 'name' | 'labels'>;
