# libs/models/src/user.ts
@@ -57,6 +57,7 @@ export enum UserRoles {
 
 export type UserHeader = Partial<Pick<User, 'id' | 'username' | 'avatar'>>;
 
-export type UserCreateBody = Partial<Pick<User, 'id' | 'role' | 'username' | 'email' | 'avatar'>>;
+export type UserCreateBody = Partial<Pick<User, 'role' | 'username' | 'email' | 'avatar'>>;
 
-export type UserUpdateBody = Partial<Pick<User, 'username' | 'email' | 'avatar'>>;
+export type UserUpdateBody = Partial<Pick<User, 'username' | 'email' | 'avatar' | 'lastUpdateDate'>>;
+export type UserUpdateBodyRequest = Pick<UserUpdateBody, 'username' | 'avatar'>;
